[package]
name = "babylon"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"
description = "A wrapper for Babylon.js"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/richardanaya/babylon"
readme="README.md"

[dependencies]
js_ffi = "0"
lazy_static = "1.4"
globals = "1"