[package]
name = "babylon"
version = "0.0.8"
authors = ["Richard Anaya"]
edition = "2018"
description = "A wrapper for Babylon.js"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/richardanaya/babylon"
readme="README.md"

[dependencies]
js_ffi = "0.8.0"
lazy_static = "1.4.0"
globals = "1.0.1"
nalgebra = "0.18"
