[package]
name = "babylon"
version = "0.0.15"
authors = ["Richard Anaya"]
edition = "2018"
description = "A wrapper for Babylon.js"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/richardanaya/babylon"
readme="README.md"

[dependencies]
lazy_static = "1.4.0"
globals = "1.0.1"
nalgebra = "0.32.2"
web = "0.2.12"
js = "0.5.7"
