[package]
name = "example"
version = "0.0.0"
authors = ["Richard Anaya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babylon = {path="../../"}
lazy_static = "1.4"

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true